vlib/v/checker/tests/blank_ident_const_ptr_int_literal_err.vv
const a = 3

fn main() {
	_ := &a
}
